# expense-tracking-system

./: README.md  pyproject.toml  requirements.txt
backend/: database.py  db_connection.py  logger_helper.py  server.py
frontend/: add_update_ui.py  analytics_month_ui.py  analytics_ui.py  app.py
tests/: conftest.py
tests/backend/: test_database.py
